# CollegeLabs

./: .gitignore  CMakeLists.txt  Grafika.sln  README.md  Readmy.md  clkDiv.sv  even.S  instrukcje.S  instrukcje.asm  lab1.ipynb  leds.sv  opera.m  print.S  print.c  prog.pcg  prog1.c  prog2.cpp  reg.sv  run.sh  simAdder.sv  test.h  timing.xdc  top.sv  yet.m  zad.c  zuber.m
HDMI/: HDMIFinal.xpr
Task/: Projekt.md  sumaElementow.asm  zad3.c  zad3.sh  zad4.asm  zad4.sh
egz/: CMakeLists.txt  Main.cpp
lab01/: ex0.scala
lab02/: ex1.scala
lab03/: ex3.scala
lab04/: ex4.scala  ex42.scala
lab05/: GUIMyFrame1.cpp  GUIMyFrame1.h  ex5.scala  ex52.scala  lab5.cpp  lab5.vcxproj  lab5.vcxproj.filters  vecmat.cpp  vecmat.h
lab06/: ex6.scala  ex62.scala
lab07/: ex7.scala  ex72.scala
lab08/: ex8.scala  ex82.scala
lab10/: main.cpp
lab11/: CMakeLists.txt  VHS.csv  lab.java  main.cpp
lab4/: BigInt.java  CMakeLists.txt  ChartClass.cpp  ChartClass.h  ConfigClass.cpp  ConfigClass.h  GUI.h  GUIMyFrame1.cpp  GUIMyFrame1.h  Hacking.java  Main.cpp  lab4.cpp  lab4.vcxproj  lab4.vcxproj.filters  vecmat.cpp  vecmat.h
lab4-6/: kaczki.m  lab61.m  lab62.m  ptaki.m
lab5/: CMakeLists.txt  GUIMyFrame1.cpp  GUIMyFrame1.h  VHS.csv  lab5.cpp  lab5.vcxproj  lab5.vcxproj.filters  vecmat.cpp  vecmat.h
lab6/: GUI.h  GUIMyFrame1.cpp  GUIMyFrame1.h  lab6.vcxproj  lab6.vcxproj.filters  main.cpp
lab7/: GUI.h  GUIMyFrame1.cpp  GUIMyFrame1.h  PrepareData.cpp  lab7.vcxproj  main.cpp  (+1 more)
labcpp1/lab08/executables/: CMakeLists.txt
labcpp1/lab08/executables/main/: complex.cpp  vector.cpp
(+239 files in other folders)
